# website

./: .editorconfig  .gitignore  .python-version  .tmuxp.yaml  .tool-versions  Makefile  Pipfile  bootstrap_env.py  conf.py  hire-me.rst  index.md  index.rst  leather.md  leather.rst  manifest.json  news.md  news.rst  pyproject.toml  python_packages.rst  requirements.txt  support.md  support.rst  website.py  what-people-say.md  what-people-say.rst
.github/workflows/: publish-docs.yml  publish.yml
_assets/: README.md
_ext/: external.py
_static/: git-pull.css
_static/css/: custom.css  git-pull.css
_templates/: layout.html  more.html
_templates/sidebar/: projects.html
blog/2017/11/: when-job-interview-tests-fail.rst
blog/2018/01/: technical-screening.rst
code/python/: structure.md  structure.rst
code_explorer/: cihai.md  cihai.rst  django-vs-flask-2017.rst  django-vs-flask.md  django-vs-flask.rst  index.md  index.rst  python-packaging-relative-cyclic.md  python-packaging-relative-cyclic.rst  python-wos-trackers.md  python-wos-trackers.rst  python_packages.rst  rst-docutils-sphinx-readthedocs.md  rst-docutils-sphinx-readthedocs.rst
consulting/: index.rst  starter-kits.rst  stripe-integration.rst  why-python.rst  will-i-work-for-equity-only.rst  working-for-equity.md  working-for-equity.rst
contributing/: index.md  mission.md
directive/: 000-git-pull.md
mentoring/: 3-day-workshop.rst  faq.rst  index.rst
org/: index.md
org/python/: code-quality.md  documenting.md  index.md  releasing.md  setup.md  testing.md  why-python.md
sidebar_widget/: README.md
updates/: 2017-03-30.md  2017-03-30.rst  2017-cihai.md  2017-cihai.rst
widget/: package.json
widget/src/: App.css  App.tsx
