[tool.poetry]
name = "git-pull-website"
version = "0.3.0"
description = "git-pull website"

license = "All Rights Reserved."

authors = [
  "Tony Narlock <tony@git-pull.com>",
]

readme = 'README.rst'

homepage = "https://www.git-pull.com"

[tool.poetry.urls]
"Bug Tracker" = "https://github.com/git-pull/website/issues"
Repository = "https://github.com/git-pull/website"

[tool.poetry.dependencies]
python = "^3.10"
sphinxcontrib-mermaid = "^0.7.1"

[tool.poetry.dev-dependencies]
### Docs ###
sphinx = "*"
furo = "*"
sphinx-autobuild = "*"
sphinx-inline-tabs = "*"
sphinxext-opengraph = "*"
sphinx-copybutton = "*"
sphinxext-rediraffe = "*"
myst_parser = "*"
docutils = "*"

### Format ###
black = "*"
isort = "*"

### Lint ###
flake8 = "*"

[tool.poetry.extras]
docs = [
  "docutils",
  "sphinx",
  "sphinx-autobuild",
  "sphinx-copybutton",
  "sphinxext-opengraph",
  "sphinx-inline-tabs",
  "sphinxext-rediraffe",
  "myst_parser",
  "furo",
]
format = ["black", "isort"]
lint = ["flake8"]
