[tool.poetry]
name = "git-pull-website"
version = "0.3.0"
description = "git-pull website"

license = "All Rights Reserved."

authors = [
  "Tony Narlock <tony@git-pull.com>",
]

readme = 'README.rst'

homepage = "https://www.git-pull.com"

[tool.poetry.urls]
"Bug Tracker" = "https://github.com/git-pull/website/issues"
Repository = "https://github.com/git-pull/website"

[tool.poetry.dependencies]
python = "^3.10"

[tool.poetry.group.dev.dependencies]
### Docs ###
sphinx = "*"
furo = "*"
sphinx-autobuild = "*"
sphinx-inline-tabs = "*"
sphinxext-opengraph = "<0.8"  # https://github.com/wpilibsuite/sphinxext-opengraph/issues/100
sphinx-copybutton = "*"
sphinxext-rediraffe = "*"
myst_parser = "*"
docutils = "*"

### Lint ###
ruff = "*"

[tool.poetry.extras]
docs = [
  "docutils",
  "sphinx",
  "sphinx-autobuild",
  "sphinx-copybutton",
  "sphinxext-opengraph",
  "sphinx-inline-tabs",
  "sphinxext-rediraffe",
  "myst_parser",
  "furo",
]
lint = ["ruff"]
