[tool.poetry]
name = "website"
version = "0.3.0"
description = "git-pull website"

license = "All Rights Reserved."

authors = [
  "Tony Narlock <tony@git-pull.com>",
]

homepage = "https://www.git-pull.com"

[tool.poetry.urls]
"Bug Tracker" = "https://github.com/git-pull/website/issues"
Repository = "https://github.com/git-pull/website"

[tool.poetry.dependencies]
python = "^3.12"

[tool.poetry.group.docs.dependencies]
### Docs ###
sphinx = "*"
furo = "*"
sphinx-autobuild = "*"
sphinx-inline-tabs = "*"
sphinxext-opengraph = "<0.8" # https://github.com/wpilibsuite/sphinxext-opengraph/issues/100
sphinx-copybutton = "*"
sphinxext-rediraffe = "*"
myst_parser = "*"
docutils = "*"

[tool.poetry.group.lint.dependencies]
### Lint ###
ruff = "*"
